# splent_feature_public

./: MANIFEST.in  pyproject.toml
src/splent_feature_public/: routes.py
src/splent_feature_public/templates/public/: index.html
src/splent_io/splent_feature_public/: __init__.py  hooks.py  routes.py  seeders.py
src/splent_io/splent_feature_public/assets/js/: webpack.config.js
src/splent_io/splent_feature_public/templates/public/: index.html
