[build-system]
requires = ["setuptools>=80.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splent_feature_public"
version = "1.1.0"
requires-python = ">=3.13"
authors = [{ name = "DiversoLab", email = "diversolab@us.es" }]
dependencies = [

]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.splent.contract]
description = "Public landing page feature: unauthenticated home route"

[tool.splent.contract.provides]
routes = ["/"]
blueprints = ["public_bp"]
models = []
commands = []

[tool.splent.contract.requires]
features = []
env_vars = []
